[gd_scene load_steps=8 format=2]

[ext_resource path="res://genetic_controller.gd" type="Script" id=1]
[ext_resource path="res://agent2_b.tscn" type="PackedScene" id=2]
[ext_resource path="res://ScorePanel.gd" type="Script" id=3]
[ext_resource path="res://plot.gd" type="Script" id=4]
[ext_resource path="res://nn_representation.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buttons.gd" type="Script" id=6]
[ext_resource path="res://agent2_a.tscn" type="PackedScene" id=7]

[node name="Map2" type="Node2D" index="0"]

_sections_unfolded = [ "Transform" ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="0"]

scale = Vector2( 5, 5 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D" index="0"]

position = Vector2( 0.119847, -16.5225 )
scale = Vector2( 0.503789, 0.51908 )
build_mode = 0
polygon = PoolVector2Array( -3.94913, 10.7508, 2042.88, 22.6926, 2040, 1200, 0, 1200, 0, 20, -40, 20, -40, 1210, -40, 1240, 2100, 1240, 2100, -60, 0, -60 )
_sections_unfolded = [ "Transform" ]

[node name="A" type="Node2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( -0.799683, -20.7289 )
scale = Vector2( 5, 5 )
z_index = 1
z_as_relative = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Time" type="Label" parent="A" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 288.0
margin_top = 477.0
margin_right = 328.0
margin_bottom = 491.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AgentInstancer" type="Node2D" parent="A" index="1"]

position = Vector2( 520.981, 308.737 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z", "Z Index" ]
agent_scene = ExtResource( 2 )

[node name="ScorePanel" type="Tree" parent="A" index="2"]

visible = false
modulate = Color( 1, 1, 1, 0.66298 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 761.0
margin_top = 139.0
margin_right = 1021.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
allow_reselect = false
allow_rmb_select = false
hide_folding = false
hide_root = false
drop_mode_flags = 0
select_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="PlotPanel" type="Panel" parent="A" index="3"]

visible = false
modulate = Color( 1, 1, 1, 0.878471 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 366.0
margin_right = 259.0
margin_bottom = 599.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Grow Direction", "Rect", "Visibility" ]
colorBest = Color( 0.242188, 1, 0, 1 )
colorMean = Color( 0, 0.625, 1, 1 )
colorWorst = Color( 1, 0, 0, 1 )
margin = 10

[node name="NeuralPanel" parent="A" index="4" instance=ExtResource( 5 )]

visible = false
modulate = Color( 1, 1, 1, 0.823216 )
margin_left = 762.0
margin_top = 367.0
margin_right = 1271.0
margin_bottom = 816.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_default_cursor_shape = 0
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="NeuralPanelLabel" type="RichTextLabel" parent="A" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 762.0
margin_top = 366.0
margin_right = 877.0
margin_bottom = 381.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "[color=yellow]Inputs[/color]  [color=fuchsia]Outputs[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Inputs  Outputs"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="PlotPanelLabel" type="RichTextLabel" parent="A" index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1.0
margin_top = 367.0
margin_right = 128.0
margin_bottom = 382.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "[color=lime]Best[/color]  [color=aqua]Mean[/color] [color=red]Worst[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Best  Mean Worst"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="Buttons" type="Control" parent="A" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 265.0
margin_top = 546.0
margin_right = 305.0
margin_bottom = 586.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )
_sections_unfolded = [ "Rect" ]

[node name="TextOverview" type="Label" parent="A/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 496.0
margin_top = -28.0
margin_right = 748.0
margin_bottom = -14.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="A/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = -31.0
margin_right = 550.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
columns = 3
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="ButtonPlayStop" type="Button" parent="A/Buttons/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Star simulation"
flat = false
align = 1

[node name="ButtonLoadAgent" type="Button" parent="A/Buttons/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_right = 344.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load agent"
flat = false
align = 1

[node name="ButtonSaveAgent" type="Button" parent="A/Buttons/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_right = 468.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save agent"
flat = false
align = 1

[node name="SpinBoxMutationRate" type="SpinBox" parent="A/Buttons/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 170.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 5.0
exp_edit = false
rounded = true
editable = true
prefix = "Mutation rate:"
suffix = "%"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxLifeTime" type="SpinBox" parent="A/Buttons/GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 24.0
margin_right = 344.0
margin_bottom = 48.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 4.0
exp_edit = false
rounded = true
editable = true
prefix = "Lifetime:"
suffix = "seconds"
_sections_unfolded = [ "Rect" ]

[node name="LineEditAgentName" type="LineEdit" parent="A/Buttons/GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_top = 24.0
margin_right = 468.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "agent name"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="SpinBoxPoblationSize" type="SpinBox" parent="A/Buttons/GridContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 170.0
margin_bottom = 76.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 2.0
max_value = 500.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
editable = true
prefix = "Poblation:"
suffix = "agents"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxCandidatesSize" type="SpinBox" parent="A/Buttons/GridContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 52.0
margin_right = 344.0
margin_bottom = 76.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = true
editable = true
prefix = "Candidates:"
suffix = "agents"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxNeuronSize" type="SpinBox" parent="A/Buttons/GridContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_top = 52.0
margin_right = 468.0
margin_bottom = 76.0
rect_min_size = Vector2( 120, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 6.0
max_value = 100.0
step = 1.0
page = 0.0
value = 14.0
exp_edit = false
rounded = true
editable = true
prefix = "Neurons:"
suffix = ""
_sections_unfolded = [ "Rect" ]

[node name="B" type="Node2D" parent="." index="2"]

position = Vector2( 0, -0.999985 )
scale = Vector2( 5, 5 )
z_index = 1
z_as_relative = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Time" type="Label" parent="B" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 287.0
margin_top = 118.0
margin_right = 327.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AgentInstancer" type="Node2D" parent="B" index="1"]

position = Vector2( 519.761, 317.78 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Z Index" ]
agent_scene = ExtResource( 7 )

[node name="ScorePanel" type="Tree" parent="B" index="2"]

visible = false
modulate = Color( 1, 1, 1, 0.66298 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 761.0
margin_top = 139.0
margin_right = 1022.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1
allow_reselect = false
allow_rmb_select = false
hide_folding = false
hide_root = false
drop_mode_flags = 0
select_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="PlotPanel" type="Panel" parent="B" index="3"]

visible = false
modulate = Color( 1, 1, 1, 0.878471 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 6.0
margin_right = 262.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 4 )
_sections_unfolded = [ "Grow Direction", "Rect", "Visibility" ]
colorBest = Color( 0.242188, 1, 0, 1 )
colorMean = Color( 0, 0.625, 1, 1 )
colorWorst = Color( 1, 0, 0, 1 )
margin = 10

[node name="NeuralPanel" parent="B" index="4" instance=ExtResource( 5 )]

visible = false
modulate = Color( 1, 1, 1, 0.823216 )
margin_left = 762.0
margin_top = 6.0
margin_right = 1020.0
margin_bottom = 233.0
mouse_default_cursor_shape = 0
_sections_unfolded = [ "Material", "Rect", "Visibility" ]

[node name="NeuralPanelLabel" type="RichTextLabel" parent="B" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 765.0
margin_top = 6.0
margin_right = 880.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "[color=yellow]Inputs[/color]  [color=fuchsia]Outputs[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Inputs  Outputs"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="PlotPanelLabel" type="RichTextLabel" parent="B" index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 4.0
margin_top = 7.0
margin_right = 131.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = true
bbcode_text = "[color=lime]Best[/color]  [color=aqua]Mean[/color] [color=red]Worst[/color]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Best  Mean Worst"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="Buttons" type="Control" parent="B" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 262.0
margin_top = 46.0
margin_right = 302.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )

[node name="TextOverview" type="Label" parent="B/Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 494.0
margin_top = -5.0
margin_right = 746.0
margin_bottom = 9.0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Rect", "Visibility", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="GridContainer" type="GridContainer" parent="B/Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = -31.0
margin_right = 550.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
columns = 3
_sections_unfolded = [ "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="ButtonPlayStop" type="Button" parent="B/Buttons/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Star simulation"
flat = false
align = 1

[node name="ButtonLoadAgent" type="Button" parent="B/Buttons/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_right = 344.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Load agent"
flat = false
align = 1

[node name="ButtonSaveAgent" type="Button" parent="B/Buttons/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_right = 468.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Save agent"
flat = false
align = 1

[node name="SpinBoxMutationRate" type="SpinBox" parent="B/Buttons/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 170.0
margin_bottom = 48.0
rect_min_size = Vector2( 150, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 5.0
exp_edit = false
rounded = true
editable = true
prefix = "Mutation rate:"
suffix = "%"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxLifeTime" type="SpinBox" parent="B/Buttons/GridContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 24.0
margin_right = 344.0
margin_bottom = 48.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 4.0
exp_edit = false
rounded = true
editable = true
prefix = "Lifetime:"
suffix = "seconds"
_sections_unfolded = [ "Rect" ]

[node name="LineEditAgentName" type="LineEdit" parent="B/Buttons/GridContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_top = 24.0
margin_right = 468.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "agent name"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="SpinBoxPoblationSize" type="SpinBox" parent="B/Buttons/GridContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 170.0
margin_bottom = 76.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 2.0
max_value = 500.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = true
editable = true
prefix = "Poblation:"
suffix = "agents"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxCandidatesSize" type="SpinBox" parent="B/Buttons/GridContainer" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 174.0
margin_top = 52.0
margin_right = 344.0
margin_bottom = 76.0
rect_min_size = Vector2( 170, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 1.0
max_value = 100.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = true
editable = true
prefix = "Candidates:"
suffix = "agents"
_sections_unfolded = [ "Rect" ]

[node name="SpinBoxNeuronSize" type="SpinBox" parent="B/Buttons/GridContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 348.0
margin_top = 52.0
margin_right = 468.0
margin_bottom = 76.0
rect_min_size = Vector2( 120, 0 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 6.0
max_value = 100.0
step = 1.0
page = 0.0
value = 14.0
exp_edit = false
rounded = true
editable = true
prefix = "Neurons:"
suffix = ""
_sections_unfolded = [ "Rect" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

position = Vector2( 2559.26, 1450.44 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 5, 5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform" ]

[connection signal="cell_selected" from="A/ScorePanel" to="A/ScorePanel" method="_on_ScorePanel_cell_selected"]

[connection signal="pressed" from="A/Buttons/GridContainer/ButtonPlayStop" to="A/Buttons" method="_on_ButtonPlayStop_pressed"]

[connection signal="button_down" from="A/Buttons/GridContainer/ButtonLoadAgent" to="A/Buttons" method="_on_ButtonLoadAgent_button_down"]

[connection signal="pressed" from="A/Buttons/GridContainer/ButtonSaveAgent" to="A/Buttons" method="_on_ButtonSaveAgent_pressed"]

[connection signal="value_changed" from="A/Buttons/GridContainer/SpinBoxMutationRate" to="A/Buttons" method="_on_SpinBoxMutationRate_value_changed"]

[connection signal="value_changed" from="A/Buttons/GridContainer/SpinBoxLifeTime" to="A/Buttons" method="_on_SpinBoxLifeTime_value_changed"]

[connection signal="value_changed" from="A/Buttons/GridContainer/SpinBoxPoblationSize" to="A/Buttons" method="_on_SpinBoxPoblationSize_value_changed"]

[connection signal="value_changed" from="A/Buttons/GridContainer/SpinBoxCandidatesSize" to="A/Buttons" method="_on_SpinBoxCandidatesSize_value_changed"]

[connection signal="value_changed" from="A/Buttons/GridContainer/SpinBoxNeuronSize" to="A/AgentInstancer" method="_on_SpinBoxNeuronSize_value_changed"]

[connection signal="cell_selected" from="B/ScorePanel" to="B/ScorePanel" method="_on_ScorePanel_cell_selected"]

[connection signal="pressed" from="B/Buttons/GridContainer/ButtonPlayStop" to="B/Buttons" method="_on_ButtonPlayStop_pressed"]

[connection signal="button_down" from="B/Buttons/GridContainer/ButtonLoadAgent" to="B/Buttons" method="_on_ButtonLoadAgent_button_down"]

[connection signal="pressed" from="B/Buttons/GridContainer/ButtonSaveAgent" to="B/Buttons" method="_on_ButtonSaveAgent_pressed"]

[connection signal="value_changed" from="B/Buttons/GridContainer/SpinBoxMutationRate" to="B/Buttons" method="_on_SpinBoxMutationRate_value_changed"]

[connection signal="value_changed" from="B/Buttons/GridContainer/SpinBoxLifeTime" to="B/Buttons" method="_on_SpinBoxLifeTime_value_changed"]

[connection signal="value_changed" from="B/Buttons/GridContainer/SpinBoxPoblationSize" to="B/Buttons" method="_on_SpinBoxPoblationSize_value_changed"]

[connection signal="value_changed" from="B/Buttons/GridContainer/SpinBoxCandidatesSize" to="B/Buttons" method="_on_SpinBoxCandidatesSize_value_changed"]

[connection signal="value_changed" from="B/Buttons/GridContainer/SpinBoxNeuronSize" to="B/AgentInstancer" method="_on_SpinBoxNeuronSize_value_changed"]


